; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/ppcmmu/extr_gdblib.c_TakeException.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/ppcmmu/extr_gdblib.c_TakeException.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@Signal = common dso_local global i32 0, align 4
@RegisterSaveArea = common dso_local global i32* null, align 8
@SendSignal = common dso_local global i64 0, align 8
@Continue = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @TakeException(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  store i32 %0, i32* %3, align 4
  store i32* %1, i32** %4, align 8
  %5 = load i32, i32* %3, align 4
  store i32 %5, i32* @Signal, align 4
  %6 = load i32*, i32** %4, align 8
  store i32* %6, i32** @RegisterSaveArea, align 8
  %7 = load i32, i32* @Signal, align 4
  %8 = call i32 @PacketWriteSignal(i32 %7)
  store i64 0, i64* @SendSignal, align 8
  store i64 0, i64* @Continue, align 8
  br label %9

9:                                                ; preds = %13, %2
  %10 = load i64, i64* @Continue, align 8
  %11 = icmp ne i64 %10, 0
  %12 = xor i1 %11, true
  br i1 %12, label %13, label %17

13:                                               ; preds = %9
  %14 = load i32, i32* %3, align 4
  %15 = load i32*, i32** %4, align 8
  %16 = call i32 @SerialInterrupt(i32 %14, i32* %15)
  br label %9

17:                                               ; preds = %9
  ret i32 1
}

declare dso_local i32 @PacketWriteSignal(i32) #1

declare dso_local i32 @SerialInterrupt(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
